@@ -52,7 +52,8 @@ public class View implements Iterable<SSTableIndex>
         for (SSTableIndex sstableIndex : indexes)
         {
             this.view.put(sstableIndex.getSSTable().descriptor, sstableIndex);
-            rangeTermTreeBuilder.add(sstableIndex);
+            if (!indexTermType.isVector())
+                rangeTermTreeBuilder.add(sstableIndex);
         }
 
         this.rangeTermTree = rangeTermTreeBuilder.build();
